sandc/test/fixtures/astRegression/shouldSucceed/GenericFunctionCall.sand
pub class GenericFunctionCall {
    single() {
        foo<int>()
    }

    multiple() {
        foo<int, String, char[+]>()
    }
}