sandc/test/fixtures/astRegression/shouldFail/productions/type/ListGenericInstantiation.sand
pub class ListGenericInstantiation {
    foo(): T[+]<A> {
        
    }
}